--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "2.5.0",
-    "serialport": "0.3.0",
+    "serialport": "> 0.3.0 && <= 1.0.6",
     "socket.io": "0.8.7",
     "jade": ">= 0.0.1"
   }
